Add base components

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rex Chan's e-Portfolio</title>
   </head>
-  <body>
+  <body onload="() => console.log('On load')">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
